Add some translations

--- a/l10n/po/ja_JP/_guides/cassandra.adoc.po
+++ b/l10n/po/ja_JP/_guides/cassandra.adoc.po
@@ -781,7 +781,7 @@ msgstr ""
 #: upstream/_guides/cassandra.adoc:433
 #, fuzzy
 msgid "Note the usage of `MutinyMappedReactiveResultSet` - it is a specialized `Mutiny` type converted from the original `Publisher` returned by the driver, which also exposes a few extra methods, e.g. to obtain the query execution info. If you don't need anything in that interface, you can also simply declare your method to return `Multi`: `Multi<Fruit> findAll()`,"
-msgstr "`MutinyMappedReactiveResultSet` の使い方に注意してください。これは、ドライバが返したオリジナルの `Publisher` から変換された特殊な `Mutiny` タイプで、クエリの実行情報を取得するなど、いくつかの追加メソッドも公開されています。このインターフェースに何も必要ない場合は、単に `Multi`: `Multi&amp;lt;Fruit&amp;gt; findAll()` を返すようにメソッドを宣言することもできます。"
+msgstr "`MutinyMappedReactiveResultSet` の使い方に注意してください。これは、ドライバが返したオリジナルの `Publisher` から変換された特殊な `Mutiny` タイプで、クエリの実行情報を取得するなど、いくつかの追加メソッドも公開されています。このインターフェースに何も必要ない場合は、単に `Multi`: `Multi<Fruit&amp;gt; findAll()` を返すようにメソッドを宣言することもできます。"
 
 #. type: Plain text
 #: upstream/_guides/cassandra.adoc:436
@@ -1312,13 +1312,13 @@ msgstr "`QuarkusCqlSession` の豆です。"
 #: upstream/_guides/cassandra.adoc:740
 #, fuzzy
 msgid "or the asynchronous version of this bean, that is, `CompletionStage<QuarkusCqlSession>`;"
-msgstr "や、このビーンの非同期バージョン、つまり `CompletionStage&amp;lt;QuarkusCqlSession&amp;gt;`;"
+msgstr "や、このビーンの非同期バージョン、つまり `CompletionStage<QuarkusCqlSession&amp;gt;`;"
 
 #. type: Plain text
 #: upstream/_guides/cassandra.adoc:741
 #, fuzzy
 msgid "or the reactive version of this bean, that is, `Uni<QuarkusCqlSession>`."
-msgstr "または、このビーンのリアクティブバージョン、つまり、 `Uni&amp;lt;QuarkusCqlSession&amp;gt;` 。"
+msgstr "または、このビーンのリアクティブバージョン、つまり、 `Uni<QuarkusCqlSession&amp;gt;` 。"
 
 #. type: Plain text
 #: upstream/_guides/cassandra.adoc:745
@@ -1342,7 +1342,7 @@ msgstr "遅延初期化を使用することで、アプリケーションの起
 #: upstream/_guides/cassandra.adoc:765
 #, fuzzy
 msgid "If you want to use Vert.x (or any other reactive framework) and keep the lazy initialization behavior, you should instead inject only `CompletionStage<QuarkusCqlSession>` or `Uni<QuarkusCqlSession>`. When injecting these beans, the initialization process will be triggered lazily, but it will happen in the background, in a non-blocking way, leveraging the Vert.x event loop. This way you don't risk blocking the Vert.x thread."
-msgstr "Vert.x（または他のリアクティブフレームワーク）を使用し、遅延初期化動作を維持したい場合は、代わりに `CompletionStage&amp;lt;QuarkusCqlSession&amp;gt;` または `Uni&amp;lt;QuarkusCqlSession&amp;gt;` のみを注入してください。これらのBeanを注入すると、初期化プロセスが遅延的にトリガされますが、Vert.xのイベントループを利用してノンブロッキングでバックグラウンドで行われます。これにより、Vert.xスレッドをブロックする危険性がありません。"
+msgstr "Vert.x（または他のリアクティブフレームワーク）を使用し、遅延初期化動作を維持したい場合は、代わりに `CompletionStage<QuarkusCqlSession&amp;gt;` または `Uni&amp;lt;QuarkusCqlSession&amp;gt;` のみを注入してください。これらのBeanを注入すると、初期化プロセスが遅延的にトリガされますが、Vert.xのイベントループを利用してノンブロッキングでバックグラウンドで行われます。これにより、Vert.xスレッドをブロックする危険性がありません。"
 
 #. type: Plain text
 #: upstream/_guides/cassandra.adoc:770
