--- a/l10n/po/ja_JP/_guides/config-extending-support.adoc.po
+++ b/l10n/po/ja_JP/_guides/config-extending-support.adoc.po
@@ -449,7 +449,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_guides/config-extending-support.adoc:234
 msgid "By implementing `io.smallrye.config.ConfigSourceFactory`, a list of `ConfigSource` may be provided via the `Iterable<ConfigSource> getConfigSources(ConfigSourceContext context)` method. The `ConfigSourceFactory` may also assign a priority by overriding the method `OptionalInt getPriority()`. The priority values is used to sort multiple `io.smallrye.config.ConfigSourceFactory` (if found)."
-msgstr "`io.smallrye.config.ConfigSourceFactory` を実装することで、 `Iterable&amp;lt;ConfigSource&amp;gt; getConfigSources(ConfigSourceContext context)` メソッドを介して `ConfigSource` のリストを提供することができます。また、 `ConfigSourceFactory` は、 `OptionalInt getPriority()` メソッドをオーバーライドすることで、優先度を割り当てることができます。優先度の値は、複数の `io.smallrye.config.ConfigSourceFactory` をソートするために使用されます（見つかった場合）。"
+msgstr "`io.smallrye.config.ConfigSourceFactory` を実装することで、 `Iterable<ConfigSource&amp;gt; getConfigSources(ConfigSourceContext context)` メソッドを介して `ConfigSource` のリストを提供することができます。また、 `ConfigSourceFactory` は、 `OptionalInt getPriority()` メソッドをオーバーライドすることで、優先度を割り当てることができます。優先度の値は、複数の `io.smallrye.config.ConfigSourceFactory` をソートするために使用されます（見つかった場合）。"
 
 #. type: Plain text
 #: upstream/_guides/config-extending-support.adoc:237
