--- a/l10n/po/ja_JP/_guides/config-reference.adoc.po
+++ b/l10n/po/ja_JP/_guides/config-reference.adoc.po
@@ -1082,7 +1082,7 @@ msgstr "インデックス付きプロパティの構文は、プロパティ名
 #: upstream/_guides/config-reference.adoc:494
 #, fuzzy
 msgid "A call to `Config#getValues(\"my.collection\", String.class)`, will automatically create and convert a `List<String>` that contains the values `dog`, `cat` and `turtle`. A call to `Config#getValues(\"my.indexed.collection\", String.class)` returns the exact same result. If the same property name exists in both froms (regular and indexed), the regular value has priority."
-msgstr "`Config#getValues(\"my.collection\", String.class)` を呼び出すと、 `dog` 、 `cat` 、 `turtle` の値を含む `List&amp;lt;String&amp;gt;` が自動的に作成、変換されます。 `Config#getValues(\"my.indexed.collection\", String.class)` を呼び出すと、まったく同じ結果が得られます。同じプロパティ名が両方のフロム（通常のフロムとインデックス付きのフロム）に存在する場合、通常の値が優先されます。"
+msgstr "`Config#getValues(\"my.collection\", String.class)` を呼び出すと、 `dog` 、 `cat` 、 `turtle` の値を含む `List<String>` が自動的に作成、変換されます。 `Config#getValues(\"my.indexed.collection\", String.class)` を呼び出すと、まったく同じ結果が得られます。同じプロパティ名が両方のフロム（通常のフロムとインデックス付きのフロム）に存在する場合、通常の値が優先されます。"
 
 #. type: Plain text
 #: upstream/_guides/config-reference.adoc:498
