--- a/l10n/po/ja_JP/_guides/getting-started-reactive.adoc.po
+++ b/l10n/po/ja_JP/_guides/getting-started-reactive.adoc.po
@@ -236,7 +236,7 @@ msgstr "リアクティブなPostgreSQLクライアント"
 #: upstream/_guides/getting-started-reactive.adoc:108
 #, fuzzy, no-wrap
 msgid "Extensions"
-msgstr "拡張機能"
+msgstr "エクステンション"
 
 #. type: Target for macro image
 #: upstream/_guides/getting-started-reactive.adoc:108
@@ -248,7 +248,7 @@ msgstr ""
 #: upstream/_guides/getting-started-reactive.adoc:112
 #, fuzzy
 msgid "The last extension is the reactive database driver for PostgreSQL.  Hibernate Reactive uses that driver to interact with the database without blocking the caller thread."
-msgstr "最後の拡張機能は、PostgreSQL用のリアクティブデータベースドライバです。Hibernate Reactiveはこのドライバを使用して、呼び出し元のスレッドをブロックすることなくデータベースと対話します。"
+msgstr "最後のエクステンションは、PostgreSQL用のリアクティブデータベースドライバです。Hibernate Reactiveはこのドライバを使用して、呼び出し元のスレッドをブロックすることなくデータベースと対話します。"
 
 #. type: Plain text
 #: upstream/_guides/getting-started-reactive.adoc:114
@@ -440,13 +440,13 @@ msgstr "期待通りのJSON配列が得られます。RESTEasy Reactiveでは、
 #: upstream/_guides/getting-started-reactive.adoc:221
 #, fuzzy
 msgid "Look at the return type; it returns a `Uni` of `List<Fruit>`.  `Uni` is an asynchronous type.  It's a bit like a future.  It's a placeholder that will get its value (item) later.  When it receives the item (Mutiny says it _emits_ its item), you can attach some behavior.  That's how we express the continuation: get a uni, and when the uni emits its item, execute the rest of the processing."
-msgstr "戻り値の型を見てください。これは `List&amp;lt;Fruit&amp;gt;` の `Uni` を返します。 `Uni` は非同期型です。これは未来のようなものです。これは後で値（アイテム）を得るためのプレースホルダーです。アイテムを受け取ったら（Mutinyではアイテムを _放出_すると言っています）、何らかの動作を付けることができます。ユニを取得し、そのユニがアイテムを発したら、残りの処理を実行する、という継続を表現しています。"
+msgstr "戻り値の型を見てください。これは `List<Fruit&amp;gt;` の `Uni` を返します。 `Uni` は非同期型です。これは未来のようなものです。これは後で値（アイテム）を得るためのプレースホルダーです。アイテムを受け取ったら（Mutinyではアイテムを _放出_すると言っています）、何らかの動作を付けることができます。ユニを取得し、そのユニがアイテムを発したら、残りの処理を実行する、という継続を表現しています。"
 
 #. type: Plain text
 #: upstream/_guides/getting-started-reactive.adoc:231
 #, fuzzy
 msgid "Reactive developers may wonder why we can't return a stream of fruits directly.  It tends to be a bad idea when dealing with a database.  Relational databases do not handle streaming well.  It’s a problem of protocols not designed for this use case.  So, to stream rows from the database, you need to keep a connection (and sometimes a transaction) open until all the rows are consumed.  If you have slow consumers, you break the golden rule of databases: don’t hold connections for too long.  Indeed, the number of connections is rather low, and having consumers keeping them for too long will dramatically reduce the concurrency of your application.  So, when possible, use a `Uni<List<T>>` and load the content.  If you have a large set of results, implement pagination."
-msgstr "リアクティブな開発者は、なぜ果実のストリームを直接返すことができないのかと思うかもしれません。それは、データベースを扱うときにはよくない考えになりがちです。リレーショナル・データベースはストリーミングをうまく扱えません。これは、このユースケースのために設計されていないプロトコルの問題です。そのため、データベースから行をストリーミングするには、すべての行が消費されるまで、接続（場合によってはトランザクション）を開いておく必要があります。消費者が遅い場合、データベースの黄金律である「接続を長く保持しない」を破ってしまいます。実際、コネクションの数はかなり少なく、コンシューマがコネクションを長時間保持することは、アプリケーションの並行性を劇的に低下させます。ですから、可能な限り `Uni&amp;lt;List&amp;lt;T&amp;gt;&amp;gt;` を使用し、コンテンツをロードしてください。結果のセットが大きい場合は、ページネーションを実装してください。"
+msgstr "リアクティブな開発者は、なぜ果実のストリームを直接返すことができないのかと思うかもしれません。それは、データベースを扱うときにはよくない考えになりがちです。リレーショナル・データベースはストリーミングをうまく扱えません。これは、このユースケースのために設計されていないプロトコルの問題です。そのため、データベースから行をストリーミングするには、すべての行が消費されるまで、接続（場合によってはトランザクション）を開いておく必要があります。消費者が遅い場合、データベースの黄金律である「接続を長く保持しない」を破ってしまいます。実際、コネクションの数はかなり少なく、コンシューマがコネクションを長時間保持することは、アプリケーションの並行性を劇的に低下させます。ですから、可能な限り `Uni<List<T&amp;gt;&amp;gt;` を使用し、コンテンツをロードしてください。結果のセットが大きい場合は、ページネーションを実装してください。"
 
 #. type: Plain text
 #: upstream/_guides/getting-started-reactive.adoc:233
