--- a/l10n/po/ja_JP/_guides/getting-started-testing.adoc.po
+++ b/l10n/po/ja_JP/_guides/getting-started-testing.adoc.po
@@ -1778,7 +1778,7 @@ msgstr "堂々としたモッキング"
 #: upstream/_guides/getting-started-testing.adoc:1061
 #, fuzzy
 msgid "If you are using the `quarkus-hibernate-orm-panache` or `quarkus-mongodb-panache` extensions, check out the xref:hibernate-orm-panache.adoc#mocking[Hibernate ORM with Panache Mocking] and xref:mongodb-panache.adoc#mocking[MongoDB with Panache Mocking] documentation for the easiest way to mock your data access."
-msgstr "`quarkus-hibernate-orm-panache` または `quarkus-mongodb-panache` 拡張機能を使用している場合は、データアクセスをモックする最も簡単な方法として、 link:hibernate-orm-panache.html#mocking[Hibernate ORM with Panache Mocking]および link:mongodb-panache.html#mocking[MongoDB with Panache Mocking]のドキュメントを確認してください。"
+msgstr "`quarkus-hibernate-orm-panache` または `quarkus-mongodb-panache` エクステンションを使用している場合は、データアクセスをモックする最も簡単な方法として、 link:hibernate-orm-panache.html#mocking[Hibernate ORM with Panache Mocking]および link:mongodb-panache.html#mocking[MongoDB with Panache Mocking]のドキュメントを確認してください。"
 
 #. type: Title ==
 #: upstream/_guides/getting-started-testing.adoc:1062
@@ -2317,7 +2317,7 @@ msgstr "`-Djava.util.logging.manager=org.jboss.logmanager.LogManager`"
 #. type: Plain text
 #: upstream/_guides/getting-started-testing.adoc:1357
 msgid "`-Dmaven.home=<path-to-your-maven-installation>`"
-msgstr "`-Dmaven.home=&amp;lt;path-to-your-maven-installation&amp;gt;`"
+msgstr "`-Dmaven.home=<path-to-your-maven-installation>`"
 
 #. type: Plain text
 #: upstream/_guides/getting-started-testing.adoc:1359
