--- a/l10n/po/ja_JP/_guides/gradle-tooling.adoc.po
+++ b/l10n/po/ja_JP/_guides/gradle-tooling.adoc.po
@@ -584,7 +584,7 @@ msgstr "オフラインでの開発やテストのための依存ファイルの
 #: upstream/_guides/gradle-tooling.adoc:339
 #, fuzzy
 msgid "Quarkus extension dependencies are divided into the runtime extension dependencies that end up on the application runtime classpath and the deployment (or build time) extension dependencies that are resolved by Quarkus only at application build time to create the build classpath. Application developers are expected to express dependencies only on the runtime artifacts of Quarkus extensions."
-msgstr "Quarkusの拡張機能の依存性は、アプリケーションのランタイムクラスパス上で終わるランタイム拡張機能の依存性と、ビルドクラスパスを作成するためにアプリケーションのビルド時にQuarkusによってのみ解決される配置（またはビルド時）拡張機能の依存性に分けられます。アプリケーション開発者は、Quarkusの拡張機能のランタイムアーティファクトにのみ依存性を表現することが期待されます。"
+msgstr "Quarkusのエクステンションの依存性は、アプリケーションのランタイムクラスパス上で終わるランタイムエクステンションの依存性と、ビルドクラスパスを作成するためにアプリケーションのビルド時にQuarkusによってのみ解決される配置（またはビルド時）エクステンションの依存性に分けられます。アプリケーション開発者は、Quarkusのエクステンションのランタイムアーティファクトにのみ依存性を表現することが期待されます。"
 
 #. type: Plain text
 #: upstream/_guides/gradle-tooling.adoc:341
