--- a/l10n/po/ja_JP/_guides/grpc-service-consumption.adoc.po
+++ b/l10n/po/ja_JP/_guides/grpc-service-consumption.adoc.po
@@ -765,7 +765,7 @@ msgstr "メトリクスの収集を可能にする"
 #: upstream/_guides/grpc-service-consumption.adoc:372
 #, fuzzy
 msgid "gRPC client metrics are automatically enabled when the application also uses the xref:micrometer.adoc[`quarkus-micrometer`] extension.  Micrometer collects the metrics of all the gRPC clients used by the application."
-msgstr "アプリケーションが拡張機能を使用している場合、gRPCクライアント・メトリクスが自動的に有効になります。  link:micrometer.html[`quarkus-micrometer`]拡張機能を使用しています。Micrometerは、アプリケーションが使用するすべてのgRPCクライアントのメトリクスを収集します。"
+msgstr "アプリケーションがエクステンションを使用している場合、gRPCクライアント・メトリクスが自動的に有効になります。  link:micrometer.html[`quarkus-micrometer`]エクステンションを使用しています。Micrometerは、アプリケーションが使用するすべてのgRPCクライアントのメトリクスを収集します。"
 
 #. type: Plain text
 #: upstream/_guides/grpc-service-consumption.adoc:374
