--- a/l10n/po/ja_JP/_guides/infinispan-client.adoc.po
+++ b/l10n/po/ja_JP/_guides/infinispan-client.adoc.po
@@ -29,7 +29,7 @@ msgstr "Infinispanクライアントの設定"
 #: upstream/_guides/infinispan-client.adoc:13
 #, fuzzy
 msgid "Infinispan is a distributed, in-memory key/value store that provides Quarkus applications with a highly configurable and independently scalable data layer.  This extension gives you client functionality that connects applications running on Quarkus with remote Infinispan clusters."
-msgstr "Infinispanは、高度に設定可能で独立して拡張可能なデータ層をQuarkusアプリケーションに提供する、分散型のメモリ内キー／バリューストアです。この拡張機能は、Quarkus上で動作するアプリケーションとリモートのInfinispanクラスタを接続するクライアント機能を提供します。"
+msgstr "Infinispanは、高度に設定可能で独立して拡張可能なデータ層をQuarkusアプリケーションに提供する、分散型のメモリ内キー／バリューストアです。このエクステンションは、Quarkus上で動作するアプリケーションとリモートのInfinispanクラスタを接続するクライアント機能を提供します。"
 
 #. type: Plain text
 #: upstream/_guides/infinispan-client.adoc:15
