--- a/l10n/po/ja_JP/_guides/jreleaser.adoc.po
+++ b/l10n/po/ja_JP/_guides/jreleaser.adoc.po
@@ -175,7 +175,7 @@ msgstr "link:http://maven.apache.org/plugins/maven-assembly-plugin/[maven-assemb
 #: upstream/_guides/jreleaser.adoc:116
 #, fuzzy
 msgid "First, let's add the os-maven-plugin to the `pom.xml`. This plugin works as a Maven extension and as such must be added to the `<build>` section of the file:"
-msgstr "まず、 `pom.xml` に os-maven-plugin を追加しましょう。このプラグインは、Maven の拡張機能として動作するため、ファイルの `&amp;lt;build&amp;gt;` セクションに追加する必要があります。"
+msgstr "まず、 `pom.xml` に os-maven-plugin を追加しましょう。このプラグインは、Maven の拡張機能として動作するため、ファイルの `<build>` セクションに追加する必要があります。"
 
 #. type: delimited block -
 #: upstream/_guides/jreleaser.adoc:128
@@ -196,7 +196,7 @@ msgstr ""
 #: upstream/_guides/jreleaser.adoc:134
 #, fuzzy
 msgid "Next, native executables on Linux and macOS platforms typically do not have a file extension but Windows executables do, we need to take care of this when renaming the generated executable. We can also place the generated distributions into their own directory to avoid cluttering the `target` directory. Thus, let's add a couple of properties to the existing `<properties>` section in the `pom.xml`:"
-msgstr "次に，Linux や macOS プラットフォーム上のネイティブな実行ファイルには通常拡張子がありませんが，Windows の実行ファイルには拡張子がありますので，生成された実行ファイルの名前を変更する際にはこの点に注意する必要があります．また，生成されたディストリビューションを独自のディレクトリに配置することで， `target` ディレクトリが散らかるのを防ぐことができます．そこで、 `pom.xml` の既存の `&amp;lt;properties&amp;gt;` セクションに、いくつかのプロパティを追加してみましょう。"
+msgstr "次に，Linux や macOS プラットフォーム上のネイティブな実行ファイルには通常拡張子がありませんが，Windows の実行ファイルには拡張子がありますので，生成された実行ファイルの名前を変更する際にはこの点に注意する必要があります．また，生成されたディストリビューションを独自のディレクトリに配置することで， `target` ディレクトリが散らかるのを防ぐことができます．そこで、 `pom.xml` の既存の `<properties>` セクションに、いくつかのプロパティを追加してみましょう。"
 
 #. type: delimited block -
 #: upstream/_guides/jreleaser.adoc:139
