--- a/l10n/po/ja_JP/_guides/qute-reference.adoc.po
+++ b/l10n/po/ja_JP/_guides/qute-reference.adoc.po
@@ -41,7 +41,7 @@ msgstr "このガイドでは、 link:#hello_world_example[導入例]、 link:#c
 #: upstream/_guides/qute-reference.adoc:24
 #, fuzzy
 msgid "Qute is primarily designed as a Quarkus extension. It is possible to use it as a \"standalone\" library too. However, in such case some of the features are not available. In general, any feature mentioned under the <<quarkus_integration>> section is missing. You can find more information about the limitations and possibilities in the <<standalone>> section."
-msgstr "Quteは、主にQuarkusの拡張機能として設計されています。Quteは、主にQuarkusの拡張機能として設計されていますが、「スタンドアロン」のライブラリとして使用することも可能です。ただし、その場合はいくつかの機能が利用できません。一般的に、 link:#quarkus_integration[[quarkus_integration]]セクションに記載されている機能はすべて欠落しています。制限や可能性については、 link:#standalone[[standalone]]セクションで詳しく説明しています。"
+msgstr "Quteは、主にQuarkusのエクステンションとして設計されています。Quteは、主にQuarkusのエクステンションとして設計されていますが、「スタンドアロン」のライブラリとして使用することも可能です。ただし、その場合はいくつかの機能が利用できません。一般的に、 link:#quarkus_integration[[quarkus_integration]]セクションに記載されている機能はすべて欠落しています。制限や可能性については、 link:#standalone[[standalone]]セクションで詳しく説明しています。"
 
 #. type: Title ==
 #: upstream/_guides/qute-reference.adoc:26
@@ -4646,7 +4646,7 @@ msgstr "Quteをスタンドアロンのライブラリとして使用"
 #: upstream/_guides/qute-reference.adoc:2127
 #, fuzzy
 msgid "Qute is primarily designed as a Quarkus extension.  However. it is possible to use it as a \"standalone\" library.  In this case, some features are not available and some additional configuration is needed."
-msgstr "Quteは、主にQuarkusの拡張機能として設計されています。しかし、「スタンドアロン」のライブラリとして使用することも可能です。この場合、いくつかの機能は利用できず、いくつかの追加設定が必要となります。"
+msgstr "Quteは、主にQuarkusのエクステンションとして設計されています。しかし、「スタンドアロン」のライブラリとして使用することも可能です。この場合、いくつかの機能は利用できず、いくつかの追加設定が必要となります。"
 
 #. type: Labeled list
 #: upstream/_guides/qute-reference.adoc:2128
