--- a/l10n/po/ja_JP/_guides/rabbitmq-reference.adoc.po
+++ b/l10n/po/ja_JP/_guides/rabbitmq-reference.adoc.po
@@ -189,7 +189,7 @@ msgstr "RabbitMQメッセージの受信"
 #: upstream/_guides/rabbitmq-reference.adoc:84
 #, fuzzy
 msgid "Let's imagine your application receives `Message<Double>`.  You can consume the payload directly:"
-msgstr "アプリケーションが `Message&amp;lt;Double&amp;gt;` を受け取ったとしましょう。ペイロードを直接消費することができます。"
+msgstr "アプリケーションが `Message<Double>` を受け取ったとしましょう。ペイロードを直接消費することができます。"
 
 #. type: delimited block -
 #: upstream/_guides/rabbitmq-reference.adoc:88
@@ -340,7 +340,7 @@ msgstr "デシリアライズ"
 #: upstream/_guides/rabbitmq-reference.adoc:157
 #, fuzzy
 msgid "The connector converts incoming RabbitMQ Messages into Reactive Messaging `Message<T>` instances. The payload type `T` depends on the value of the RabbitMQ received message Envelope `content_type` and `content_encoding` properties."
-msgstr "このコネクタは、受信する RabbitMQ メッセージを Reactive Messaging `Message&amp;lt;T&amp;gt;` インスタンスに変換します。ペイロードタイプ `T` は、RabbitMQ 受信メッセージ Envelope `content_type` および `content_encoding` プロパティの値に依存します。"
+msgstr "このコネクタは、受信する RabbitMQ メッセージを Reactive Messaging `Message<T>` インスタンスに変換します。ペイロードタイプ `T` は、RabbitMQ 受信メッセージ Envelope `content_type` および `content_encoding` プロパティの値に依存します。"
 
 #. type: Table
 #: upstream/_guides/rabbitmq-reference.adoc:160
@@ -570,7 +570,7 @@ msgstr "シリアル化"
 #: upstream/_guides/rabbitmq-reference.adoc:226
 #, fuzzy
 msgid "When sendingWhen sending a `Message<T>`, the connector converts the message into a RabbitMQ Message. The payload is converted to the RabbitMQ Message body."
-msgstr "送信時 `Message&amp;lt;T&amp;gt;` を送信する際、コネクタはメッセージを RabbitMQ Message に変換します。ペイロードは、RabbitMQ Message のボディに変換されます。"
+msgstr "送信時 `Message<T>` を送信する際、コネクタはメッセージを RabbitMQ Message に変換します。ペイロードは、RabbitMQ Message のボディに変換されます。"
 
 #. type: Table
 #: upstream/_guides/rabbitmq-reference.adoc:230
