--- a/l10n/po/ja_JP/_guides/security-properties.adoc.po
+++ b/l10n/po/ja_JP/_guides/security-properties.adoc.po
@@ -252,7 +252,7 @@ msgstr "組込ロール"
 #. type: Plain text
 #: upstream/_guides/security-properties.adoc:125
 msgid "The user to role mappings are specified in the `application.properties` file by properties keys of the form `quarkus.security.users.embedded.roles.<user>=role1[,role2[,role3[,...]]]`. The following <<roles-example>> illustrates the syntax with 4 user to role mappings:"
-msgstr "ユーザーとロールのマッピングは、 `application.properties` ファイルで `quarkus.security.users.embedded.roles.&amp;lt;user&amp;gt;=role1[,role2[,role3[,…​]]]` 形式のプロパティー・キーで指定されます。以下の link:#roles-example[[role-example]]は、4つのユーザーとロールをマッピングした構文を示しています:"
+msgstr "ユーザーとロールのマッピングは、 `application.properties` ファイルで `quarkus.security.users.embedded.roles.&amp;lt;user>=role1[,role2[,role3[,…​]]]` 形式のプロパティー・キーで指定されます。以下の link:#roles-example[[role-example]]は、4つのユーザーとロールをマッピングした構文を示しています:"
 
 #. type: Block title
 #: upstream/_guides/security-properties.adoc:127
