--- a/l10n/po/ja_JP/_guides/smallrye-kafka-incoming.adoc.po
+++ b/l10n/po/ja_JP/_guides/smallrye-kafka-incoming.adoc.po
@@ -779,7 +779,7 @@ msgid ""
 "Whether the Kafka records are consumed in batch. The channel injection point must consume a compatible type, such as `List<Payload>` or `KafkaRecordBatch<Payload>`.\n"
 "\n"
 "Type: _boolean_"
-msgstr "Kafka レコードをバッチで消費するかどうか。チャネルインジェクションポイントは、 `List&amp;lt;Payload&amp;gt;` や `KafkaRecordBatch&amp;lt;Payload&amp;gt;` のような互換性のあるタイプを消費する必要があります。"
+msgstr "Kafka レコードをバッチで消費するかどうか。チャネルインジェクションポイントは、 `List<Payload>` や `KafkaRecordBatch<Payload>` のような互換性のあるタイプを消費する必要があります。"
 
 #. type: Table
 #: upstream/_guides/smallrye-kafka-incoming.adoc:171
