--- a/l10n/po/ja_JP/_guides/vertx-reference.adoc.po
+++ b/l10n/po/ja_JP/_guides/vertx-reference.adoc.po
@@ -992,7 +992,7 @@ msgstr ""
 #: upstream/_guides/vertx-reference.adoc:462
 #, fuzzy
 msgid "The `init` method receives an `Instance<MyVerticle>`.  Then, you pass a supplier to the `deployVerticle` method.  The supplier is just calling the `get()` method.  Thanks to the `@Dependent` scope, it returns a new instance on every call.  Finally, you pass the desired number of instances to the `DeploymentOptions`, such as two in the previous example.  It will call the supplier twice, which will create two instances of your verticle."
-msgstr "`init` メソッドは、 `Instance&amp;lt;MyVerticle&amp;gt;` を受け取ります。そして、 `deployVerticle` メソッドにサプライヤーを渡します。サプライヤーは `get()` メソッドを呼び出しているだけです。 `@Dependent` スコープのおかげで、呼び出すたびに新しいインスタンスが返されます。最後に、希望する数のインスタンスを `DeploymentOptions` に渡します。例えば、前の例では2つです。はサプライヤーを2回呼び出し、頂点の2つのインスタンスを作成します。"
+msgstr "`init` メソッドは、 `Instance&amp;lt;MyVerticle>` を受け取ります。そして、 `deployVerticle` メソッドにサプライヤーを渡します。サプライヤーは `get()` メソッドを呼び出しているだけです。 `@Dependent` スコープのおかげで、呼び出すたびに新しいインスタンスが返されます。最後に、希望する数のインスタンスを `DeploymentOptions` に渡します。例えば、前の例では2つです。はサプライヤーを2回呼び出し、頂点の2つのインスタンスを作成します。"
 
 #. type: Title ==
 #: upstream/_guides/vertx-reference.adoc:464
