--- a/l10n/po/ja_JP/_guides/writing-native-applications-tips.adoc.po
+++ b/l10n/po/ja_JP/_guides/writing-native-applications-tips.adoc.po
@@ -658,7 +658,7 @@ msgstr "com.oracle.svm.core.jdk.UnsupportedFeatureError: Proxy class defined by 
 #: upstream/_guides/writing-native-applications-tips.adoc:346
 #, fuzzy
 msgid "Solving this issue requires adding the `-H:DynamicProxyConfigurationResources=<comma-separated-config-resources>` option and to provide a dynamic proxy configuration file.  You can find all the information about the format of this file in https://github.com/oracle/graal/blob/master/docs/reference-manual/native-image/DynamicProxy.md#manual-configuration[the GraalVM documentation]."
-msgstr "この問題を解決するには、 `-H:DynamicProxyConfigurationResources=&amp;lt;comma-separated-config-resources&amp;gt;` オプションを追加し、ダイナミックプロキシ設定ファイルを用意する必要があります。このファイルのフォーマットに関するすべての情報は、 link:https://github.com/oracle/graal/blob/master/docs/reference-manual/native-image/DynamicProxy.md#manual-configuration[GraalVMのドキュメント]に記載されています。"
+msgstr "この問題を解決するには、 `-H:DynamicProxyConfigurationResources=<comma-separated-config-resources>` オプションを追加し、ダイナミックプロキシ設定ファイルを用意する必要があります。このファイルのフォーマットに関するすべての情報は、 link:https://github.com/oracle/graal/blob/master/docs/reference-manual/native-image/DynamicProxy.md#manual-configuration[GraalVMのドキュメント]に記載されています。"
 
 #. type: Title ==
 #: upstream/_guides/writing-native-applications-tips.adoc:348
