--- a/l10n/po/ja_JP/_guides/deploying-to-openshift.adoc.po
+++ b/l10n/po/ja_JP/_guides/deploying-to-openshift.adoc.po
@@ -349,7 +349,7 @@ msgstr "非S2Iビルド"
 #: upstream/_guides/deploying-to-openshift.adoc:168
 #, fuzzy
 msgid "Out of the box the OpenShift extension is configured to use xref:container-image.adoc#s2i[container-image-s2i]. However, it's still possible to use other container image extensions like:"
-msgstr "OpenShift エクステンションは、初期設定では link:container-image.html#s2i[container-image-s2i] を使用するように設定されています。しかし、次のような他のコンテナイメージ拡張機能を使用することも可能です。"
+msgstr "OpenShift エクステンションは、初期設定では link:container-image.html#s2i[container-image-s2i] を使用するように設定されています。しかし、次のような他のコンテナイメージエクステンションを使用することも可能です。"
 
 #. type: Plain text
 #: upstream/_guides/deploying-to-openshift.adoc:170
@@ -679,7 +679,7 @@ msgstr "DeploymentConfigの代わりにDeploymentを使用する"
 #: upstream/_guides/deploying-to-openshift.adoc:357
 #, fuzzy
 msgid "Out of the box the extension will generate a `DeploymentConfig` resource. Often users, prefer to use `Deployment` as the main deployment resource, but still make use of Openshift specific resources like `Route`, `BuildConfig` etc.  This feature is enabled by setting `quarkus.openshift.deployment-kind` to `Deployment`."
-msgstr "この拡張機能は、すぐに `DeploymentConfig` リソースを生成します。多くのユーザーは、メインのデプロイメントリソースとして `Deployment` を使用しながらも、 `Route` 、 `BuildConfig` などの Openshift 固有のリソースを利用したいと考えています。この機能は、 `quarkus.openshift.deployment-kind` を `Deployment` に設定することで有効になります。"
+msgstr "このエクステンションは、すぐに `DeploymentConfig` リソースを生成します。多くのユーザーは、メインのデプロイメントリソースとして `Deployment` を使用しながらも、 `Route` 、 `BuildConfig` などの Openshift 固有のリソースを利用したいと考えています。この機能は、 `quarkus.openshift.deployment-kind` を `Deployment` に設定することで有効になります。"
 
 #. type: delimited block -
 #: upstream/_guides/deploying-to-openshift.adoc:361
@@ -691,7 +691,7 @@ msgstr "quarkus.openshift.route.expose=true\n"
 #: upstream/_guides/deploying-to-openshift.adoc:365
 #, fuzzy
 msgid "Since `Deployment` is a Kubernetes resource and not Openshift specific, it can't possibly leverage `ImageStream` resources, as is the case with `DeploymentConfig`. This means that the image references need to include the container image registry that hosts the image.  When the image is built, using Openshift builds (s2i binary and docker strategy) the Openshift internral image registry `image-registry.openshift-image-registry.svc:5000` will be used, unless an other registry has been explicitly specified by the user. Please note, that in the internal registry the project/namespace name is added as part of the image repository: `image-registry.openshift-image-registry.svc:5000/<project name>/<name>:<tag>`, so users will need to make sure that the target project/namespace name is aligned with the `quarkus.container-image.group`."
-msgstr "`Deployment` はKubernetesのリソースであり、Openshift固有のものではないため、 `DeploymentConfig` のように `ImageStream` のリソースを活用することはできません。このため、イメージの参照には、イメージをホストするコンテナイメージレジストリを含める必要があります。イメージがビルドされる際、Openshift のビルド（s2i バイナリおよび docker 戦略）を使用する場合、ユーザーが他のレジストリを明示的に指定していない限り、Openshift の内部イメージレジストリ `image-registry.openshift-image-registry.svc:5000` が使用されます。内部レジストリでは、プロジェクト/名前空間名がイメージリポジトリの一部として追加されることに注意してください： `image-registry.openshift-image-registry.svc:5000/&amp;lt;project name&amp;gt;/&amp;lt;name&amp;gt;:&amp;lt;tag&amp;gt;` したがって、ユーザーはターゲットのプロジェクト/名前空間名が `quarkus.container-image.group` と一致していることを確認する必要があります。"
+msgstr "`Deployment` はKubernetesのリソースであり、Openshift固有のものではないため、 `DeploymentConfig` のように `ImageStream` のリソースを活用することはできません。このため、イメージの参照には、イメージをホストするコンテナイメージレジストリを含める必要があります。イメージがビルドされる際、Openshift のビルド（s2i バイナリおよび docker 戦略）を使用する場合、ユーザーが他のレジストリを明示的に指定していない限り、Openshift の内部イメージレジストリ `image-registry.openshift-image-registry.svc:5000` が使用されます。内部レジストリでは、プロジェクト/名前空間名がイメージリポジトリの一部として追加されることに注意してください： `image-registry.openshift-image-registry.svc:5000/<project name&amp;gt;/<name&amp;gt;:<tag&amp;gt;` したがって、ユーザーはターゲットのプロジェクト/名前空間名が `quarkus.container-image.group` と一致していることを確認する必要があります。"
 
 #. type: delimited block -
 #: upstream/_guides/deploying-to-openshift.adoc:369
