--- a/l10n/po/ja_JP/_guides/dev-services.adoc.po
+++ b/l10n/po/ja_JP/_guides/dev-services.adoc.po
@@ -60,7 +60,7 @@ msgstr "AMQP"
 #: upstream/_guides/dev-services.adoc:32
 #, fuzzy
 msgid "The AMQP Dev Service will be enabled when the `quarkus-smallrye-reactive-messaging-amqp` extension is present in your application, and the broker address has not been explicitly configured. More information can be found at the xref:amqp-dev-services.adoc[AMQP Dev Services Guide]."
-msgstr "AMQP Dev Serviceは、アプリケーションに `quarkus-smallrye-reactive-messaging-amqp` 拡張機能が存在し、ブローカー・アドレスが明示的に構成されていない場合に有効になります。詳細は、『 link:amqp-dev-services.html[AMQP Dev Services Guide』]を参照してください。"
+msgstr "AMQP Dev Serviceは、アプリケーションに `quarkus-smallrye-reactive-messaging-amqp` エクステンションが存在し、ブローカー・アドレスが明示的に構成されていない場合に有効になります。詳細は、『 link:amqp-dev-services.html[AMQP Dev Services Guide』]を参照してください。"
 
 #. type: Title ==
 #: upstream/_guides/dev-services.adoc:35
@@ -72,7 +72,7 @@ msgstr "Apicurio Registry"
 #: upstream/_guides/dev-services.adoc:40
 #, fuzzy
 msgid "The Apicurio Dev Service will be enabled when the `quarkus-apicurio-registry-avro` extension is present in your application, and it's address has not been explicitly configured. More information can be found at the xref:apicurio-registry-dev-services.adoc[Apicurio Registry Dev Services Guide]."
-msgstr "Apicurio Dev Serviceは、アプリケーションに `quarkus-apicurio-registry-avro` 拡張機能が存在し、そのアドレスが明示的に設定されていない場合に有効になります。詳細は、 link:apicurio-registry-dev-services.html[Apicurio Registry Dev Services Guide]を参照してください。"
+msgstr "Apicurio Dev Serviceは、アプリケーションに `quarkus-apicurio-registry-avro` エクステンションが存在し、そのアドレスが明示的に設定されていない場合に有効になります。詳細は、 link:apicurio-registry-dev-services.html[Apicurio Registry Dev Services Guide]を参照してください。"
 
 #. type: Title ==
 #: upstream/_guides/dev-services.adoc:43
@@ -101,7 +101,7 @@ msgstr "Kafka"
 #: upstream/_guides/dev-services.adoc:59
 #, fuzzy
 msgid "The Kafka Dev Service will be enabled when the `quarkus-kafka-client` extension is present in your application, and the broker address has not been explicitly configured. More information can be found at the xref:kafka-dev-services.adoc[Kafka Dev Services Guide]."
-msgstr "Kafka Dev Serviceは、アプリケーションに `quarkus-kafka-client` 拡張機能が存在し、ブローカー・アドレスが明示的に設定されていない場合に有効になります。詳細については、 link:kafka-dev-services.html[『Kafka Dev Services Guide』]を参照してください。"
+msgstr "Kafka Dev Serviceは、アプリケーションに `quarkus-kafka-client` エクステンションが存在し、ブローカー・アドレスが明示的に設定されていない場合に有効になります。詳細については、 link:kafka-dev-services.html[『Kafka Dev Services Guide』]を参照してください。"
 
 #. type: Title ==
 #: upstream/_guides/dev-services.adoc:62
@@ -113,7 +113,7 @@ msgstr "Keycloak"
 #: upstream/_guides/dev-services.adoc:67
 #, fuzzy
 msgid "The Keycloak Dev Service will be enabled when the `quarkus-oidc` extension is present in your application, and the server address has not been explicitly configured. More information can be found at the xref:security-openid-connect-dev-services.adoc[OIDC Dev Services Guide]."
-msgstr "Keycloak Dev Serviceは、アプリケーションに `quarkus-oidc` 拡張機能が存在し、サーバ・アドレスが明示的に設定されていない場合に有効になります。詳細は， link:security-openid-connect-dev-services.html[OIDC Dev Services Guide]を参照してください。"
+msgstr "Keycloak Dev Serviceは、アプリケーションに `quarkus-oidc` エクステンションが存在し、サーバ・アドレスが明示的に設定されていない場合に有効になります。詳細は， link:security-openid-connect-dev-services.html[OIDC Dev Services Guide]を参照してください。"
 
 #. type: Title ==
 #: upstream/_guides/dev-services.adoc:71
@@ -137,7 +137,7 @@ msgstr "MongoDB"
 #: upstream/_guides/dev-services.adoc:82
 #, fuzzy
 msgid "The MongoDB Dev Service will be enabled when the `quarkus-mongodb-client` extension is present in your application, and the server address has not been explicitly configured. More information can be found at the xref:mongodb.adoc#dev-services[MongoDB Guide]."
-msgstr "MongoDB Dev Serviceが有効になるのは、アプリケーションに `quarkus-mongodb-client` 拡張機能があり、サーバーアドレスが明示的に設定されていない場合です。詳細は link:mongodb.html#dev-services[MongoDB ガイド]を参照してください。"
+msgstr "MongoDB Dev Serviceが有効になるのは、アプリケーションに `quarkus-mongodb-client` エクステンションがあり、サーバーアドレスが明示的に設定されていない場合です。詳細は link:mongodb.html#dev-services[MongoDB ガイド]を参照してください。"
 
 #. type: Title ==
 #: upstream/_guides/dev-services.adoc:85
@@ -149,7 +149,7 @@ msgstr "RabbitMQ"
 #: upstream/_guides/dev-services.adoc:90
 #, fuzzy
 msgid "The RabbitMQ Dev Service will be enabled when the `quarkus-smallrye-reactive-messaging-rabbitmq` extension is present in your application, and the broker address has not been explicitly configured. More information can be found at the xref:rabbitmq-dev-services.adoc[RabbitMQ Dev Services Guide]."
-msgstr "RabbitMQ Dev Serviceは、アプリケーションに `quarkus-smallrye-reactive-messaging-rabbitmq` 拡張機能が存在し、ブローカーアドレスが明示的に構成されていない場合に有効になります。詳細については、 link:rabbitmq-dev-services.html[『RabbitMQ Dev Services Guide』]を参照してください。"
+msgstr "RabbitMQ Dev Serviceは、アプリケーションに `quarkus-smallrye-reactive-messaging-rabbitmq` エクステンションが存在し、ブローカーアドレスが明示的に構成されていない場合に有効になります。詳細については、 link:rabbitmq-dev-services.html[『RabbitMQ Dev Services Guide』]を参照してください。"
 
 #. type: Title ==
 #: upstream/_guides/dev-services.adoc:93
@@ -161,7 +161,7 @@ msgstr "Redis"
 #: upstream/_guides/dev-services.adoc:98
 #, fuzzy
 msgid "The Redis Dev Service will be enabled when the `quarkus-redis-client` extension is present in your application, and the server address has not been explicitly configured. More information can be found at the xref:redis-dev-services.adoc[Redis Dev Services Guide]."
-msgstr "Redis Dev Serviceは、アプリケーションに `quarkus-redis-client` 拡張機能が存在し、サーバー・アドレスが明示的に設定されていない場合に有効になります。詳細は、 link:redis-dev-services.html[「Redis Dev Services Guide」]をご覧ください。"
+msgstr "Redis Dev Serviceは、アプリケーションに `quarkus-redis-client` エクステンションが存在し、サーバー・アドレスが明示的に設定されていない場合に有効になります。詳細は、 link:redis-dev-services.html[「Redis Dev Services Guide」]をご覧ください。"
 
 #. type: Title ==
 #: upstream/_guides/dev-services.adoc:101
@@ -173,7 +173,7 @@ msgstr "Vault"
 #: upstream/_guides/dev-services.adoc:106
 #, fuzzy
 msgid "The Vault Dev Service will be enabled when the `quarkus-vault` extension is present in your application, and the server address has not been explicitly configured. More information can be found at the link:{vault-guide}#dev-services[Vault Guide]."
-msgstr "Vault Dev Service は、アプリケーションに `quarkus-vault` 拡張機能が存在し、サーバー アドレスが明示的に設定されていない場合に有効になります。詳細については、 link:{vault-guide}#dev-services[Vaultガイド]を参照してください。"
+msgstr "Vault Dev Service は、アプリケーションに `quarkus-vault` エクステンションが存在し、サーバー アドレスが明示的に設定されていない場合に有効になります。詳細については、 link:{vault-guide}#dev-services[Vaultガイド]を参照してください。"
 
 #. type: Title ==
 #: upstream/_guides/dev-services.adoc:107
@@ -185,7 +185,7 @@ msgstr "Neo4j"
 #: upstream/_guides/dev-services.adoc:112
 #, fuzzy
 msgid "The Neo4j Dev Service will be enabled when the `quarkus-neo4j` extension is present in your application, and the server address has not been explicitly configured. More information can be found at the link:{neo4j-guide}#dev-services[Neo4j Guide]."
-msgstr "Neo4j Dev Serviceは、アプリケーションに `quarkus-neo4j` 拡張機能が存在し、サーバ・アドレスが明示的に設定されていない場合に有効になります。詳細は、 link:{neo4j-guide}#dev-services[Neo4jガイド]を参照してください。"
+msgstr "Neo4j Dev Serviceは、アプリケーションに `quarkus-neo4j` エクステンションが存在し、サーバ・アドレスが明示的に設定されていない場合に有効になります。詳細は、 link:{neo4j-guide}#dev-services[Neo4jガイド]を参照してください。"
 
 #. type: Title ==
 #: upstream/_guides/dev-services.adoc:113
@@ -197,4 +197,4 @@ msgstr "Infinispan"
 #: upstream/_guides/dev-services.adoc:118
 #, fuzzy
 msgid "The Infinispan Dev Service will be enabled when the `quarkus-infinispan-client` extension is present in your application, and the server address has not been explicitly configured. More information can be found at the xref:infinispan-client.adoc#dev-services[Infinispan Guide]."
-msgstr "Infinispan Dev Serviceは、アプリケーションに `quarkus-infinispan-client` 拡張機能が存在し、サーバ・アドレスが明示的に設定されていない場合に有効になります。詳細は link:infinispan-client.html#dev-services[Infinispanガイド]に記載されています。"
+msgstr "Infinispan Dev Serviceは、アプリケーションに `quarkus-infinispan-client` エクステンションが存在し、サーバ・アドレスが明示的に設定されていない場合に有効になります。詳細は link:infinispan-client.html#dev-services[Infinispanガイド]に記載されています。"
