Add some translations

--- a/l10n/po/ja_JP/_guides/cdi-reference.adoc.po
+++ b/l10n/po/ja_JP/_guides/cdi-reference.adoc.po
@@ -2046,7 +2046,7 @@ msgstr "デフォルトでは、ビーンズのリストは、 `io.quarkus.arc.I
 #: upstream/_guides/cdi-reference.adoc:936
 #, fuzzy
 msgid "If an injection point declares no other qualifier than `@All` then `@Any` is used, i.e. the behavior is equivalent to `@Inject @Any Instance<Service>`."
-msgstr "注入ポイントが `@All` 以外の修飾子を宣言していない場合、 `@Any` が使用されます。すなわち、動作は `@Inject @Any Instance<Service&amp;gt;` と同等です。"
+msgstr "注入ポイントが `@All` 以外の修飾子を宣言していない場合、 `@Any` が使用されます。すなわち、動作は `@Inject @Any Instance<Service>` と同等です。"
 
 #. type: Plain text
 #: upstream/_guides/cdi-reference.adoc:939
