--- a/l10n/po/ja_JP/_guides/hibernate-orm.adoc.po
+++ b/l10n/po/ja_JP/_guides/hibernate-orm.adoc.po
@@ -1333,13 +1333,13 @@ msgstr "すべてのリージョンは、デフォルトではサイズと時間
 #: upstream/_guides/hibernate-orm.adoc:648
 #, fuzzy
 msgid "The size of each region can be customized via the `quarkus.hibernate-orm.cache.\"<region_name>\".memory.object-count` property (Replace _<region_name>_ with the actual region name)."
-msgstr "各リージョンのサイズは、 `quarkus.hibernate-orm.cache.\"&amp;lt;region_name>\".memory.object-count` プロパティでカスタマイズできます（ _&amp;lt;region_name>_を実際のリージョン名に置き換えてください）。"
+msgstr "各リージョンのサイズは、 `quarkus.hibernate-orm.cache.\"<region_name>\".memory.object-count` プロパティでカスタマイズできます（ _<region_name>_を実際のリージョン名に置き換えてください）。"
 
 #. type: Plain text
 #: upstream/_guides/hibernate-orm.adoc:650
 #, fuzzy
 msgid "To set the maximum idle time, provide the duration (see note on duration's format below) via the `quarkus.hibernate-orm.cache.\"<region_name>\".expiration.max-idle` property (Replace _<region_name>_ with the actual region name)."
-msgstr "最大アイドル時間を設定するには、 `quarkus.hibernate-orm.cache.\"&amp;lt;region_name>\".expiration.max-idle` プロパティ _（&amp;lt;region_name>_を実際のリージョン名に置き換えてください）でデュレーション（下記のデュレーションのフォーマットに関する注意を参照）を指定します。"
+msgstr "最大アイドル時間を設定するには、 `quarkus.hibernate-orm.cache.\"<region_name>\".expiration.max-idle` プロパティ _（<region_name>_を実際のリージョン名に置き換えてください）でデュレーション（下記のデュレーションのフォーマットに関する注意を参照）を指定します。"
 
 #. type: delimited block =
 #: upstream/_guides/hibernate-orm.adoc:654
