--- a/l10n/po/ja_JP/_posts/2019-07-08-runtime-performance.adoc.po
+++ b/l10n/po/ja_JP/_posts/2019-07-08-runtime-performance.adoc.po
@@ -998,7 +998,7 @@ msgstr "最大メモリ使用量"
 #: upstream/_posts/2019-07-08-runtime-performance.adoc:201
 #, fuzzy
 msgid "Memory for each application process was measured with `ps` ``` $ ps -o rss -p <PID> ```"
-msgstr "各アプリケーションプロセスのメモリは、 `ps` `` $ ps -o rss -p &amp;lt;PID&amp;gt;` `で計測しました。"
+msgstr "各アプリケーションプロセスのメモリは、 `ps` `` $ ps -o rss -p <PID>` `で計測しました。"
 
 #. type: Plain text
 #: upstream/_posts/2019-07-08-runtime-performance.adoc:203
