--- a/l10n/po/ja_JP/_posts/2019-10-16-quarkus-0-25.0-released.adoc.po
+++ b/l10n/po/ja_JP/_posts/2019-10-16-quarkus-0-25.0-released.adoc.po
@@ -148,7 +148,7 @@ msgstr "デバッグ、サスペンド、デブモード"
 #: upstream/_posts/2019-10-16-quarkus-0-25.0-released.adoc:44
 #, fuzzy
 msgid "Dev mode doesn't suspend the execution by default anymore when you use `-Ddebug=true` or `-Ddebug=<port>`. You need to explicitly use `-Dsuspend=true`."
-msgstr "`-Ddebug=true` または `-Ddebug=&amp;lt;port&amp;gt;` を使用した場合、Dev モードはデフォルトでは実行を一時停止しません。 `-Dsuspend=true` を明示的に使用する必要があります。"
+msgstr "`-Ddebug=true` または `-Ddebug=<port>` を使用した場合、Dev モードはデフォルトでは実行を一時停止しません。 `-Dsuspend=true` を明示的に使用する必要があります。"
 
 #. type: Title ===
 #: upstream/_posts/2019-10-16-quarkus-0-25.0-released.adoc:45
