--- a/l10n/po/ja_JP/_posts/2019-11-21-vscode-quarkus-1.2.0.adoc.po
+++ b/l10n/po/ja_JP/_posts/2019-11-21-vscode-quarkus-1.2.0.adoc.po
@@ -309,7 +309,7 @@ msgstr "必要なプロパティが見つからない場合のクイックフィ
 #: upstream/_posts/2019-11-21-vscode-quarkus-1.2.0.adoc:111
 #, fuzzy
 msgid "The last new Quick Fix is a Quick Fix that adds all missing required properties to the `application.properties` file.  To use this feature, the required properties validation needs to be enabled, as it is disabled by default.  To do so, open VS Code settings and set the *Quarkus > Tools > Validation > Required > Severity* setting to either “Warning” or “Error”."
-msgstr "最後の新しいクイックフィックスは、不足しているすべての必須プロパティを `application.properties` ファイルに追加するクイックフィックスです。この機能を使用するには、デフォルトでは無効になっている必須プロパティの検証を有効にする必要があります。これを行うには、VS Codeの設定を開き、 *Quarkus &amp;gt; Tools &amp;gt; Validation &amp;gt; Required &amp;gt; Severity*の設定を \"Warning \"または \"Error \"のいずれかに設定します。"
+msgstr "最後の新しいクイックフィックスは、不足しているすべての必須プロパティを `application.properties` ファイルに追加するクイックフィックスです。この機能を使用するには、デフォルトでは無効になっている必須プロパティの検証を有効にする必要があります。これを行うには、VS Codeの設定を開き、 *Quarkus > Tools > Validation > Required > Severity*の設定を \"Warning \"または \"Error \"のいずれかに設定します。"
 
 #. type: Plain text
 #: upstream/_posts/2019-11-21-vscode-quarkus-1.2.0.adoc:116
@@ -339,7 +339,7 @@ msgstr "未知のプロパティの検証を除外するためのグロブパタ
 #: upstream/_posts/2019-11-21-vscode-quarkus-1.2.0.adoc:124
 #, fuzzy
 msgid "This release also allows you to exclude certain properties from unknown property validation.  To do this, go to VS Code settings and add a new glob pattern to the *Quarkus > Tools > Validation > Unknown > Excluded* setting."
-msgstr "このリリースでは、特定のプロパティを未知のプロパティの検証から除外することもできます。これを行うには、VS Codeの設定で、 *Quarkus &amp;gt; Tools &amp;gt; Validation &amp;gt; Unknown &amp;gt; Excluded*の設定に新しいグロブパターンを追加します。"
+msgstr "このリリースでは、特定のプロパティを未知のプロパティの検証から除外することもできます。これを行うには、VS Codeの設定で、 *Quarkus > Tools > Validation > Unknown > Excluded*の設定に新しいグロブパターンを追加します。"
 
 #. type: Named 'alt' AttributeList argument for macro 'image'
 #: upstream/_posts/2019-11-21-vscode-quarkus-1.2.0.adoc:125
