--- a/l10n/po/ja_JP/_posts/2020-04-28-quarkus-mutual-tls.adoc.po
+++ b/l10n/po/ja_JP/_posts/2020-04-28-quarkus-mutual-tls.adoc.po
@@ -648,7 +648,7 @@ msgstr "アプリケーションのブーストラッピング中に、 `kuberne
 #: upstream/_posts/2020-04-28-quarkus-mutual-tls.adoc:297
 #, fuzzy
 msgid "In case you are in a restricted environment which not allow the role to view ConfigMap to your service account, you need to mount the external `config` directory under the current working directory, for instance `<working-dir>/config/application.properties`"
-msgstr "サービスアカウントでConfigMapを見ることができないような制限された環境にいる場合、外部の `config` ディレクトリを現在の作業ディレクトリの下にマウントする必要があります。 `&amp;lt;working-dir&amp;gt;/config/application.properties`"
+msgstr "サービスアカウントでConfigMapを見ることができないような制限された環境にいる場合、外部の `config` ディレクトリを現在の作業ディレクトリの下にマウントする必要があります。 `<working-dir>/config/application.properties`"
 
 #. type: delimited block =
 #: upstream/_posts/2020-04-28-quarkus-mutual-tls.adoc:299
