--- a/l10n/po/ja_JP/_posts/2020-09-02-mutiny-redis.adoc.po
+++ b/l10n/po/ja_JP/_posts/2020-09-02-mutiny-redis.adoc.po
@@ -80,13 +80,13 @@ msgstr "このクライアントは、私たちの問題を解決するための
 #: upstream/_posts/2020-09-02-mutiny-redis.adoc:27
 #, fuzzy
 msgid "the `RedisClient.keys(pattern)` method returning `Uni<JsonArray>`. This array contains the list of keys matching a pattern passed to the `keys` method. To simplify this post, let's use: `keys(\"*\")` returning all the keys."
-msgstr "`Uni&amp;lt;JsonArray&amp;gt;` を返す `RedisClient.keys(pattern)` メソッドです。この配列には、 `keys` メソッドに渡されたパターンにマッチするキーのリストが含まれています。この記事を簡単にするために、すべてのキーを返す `keys(\"*\")` を使ってみましょう。"
+msgstr "`Uni<JsonArray>` を返す `RedisClient.keys(pattern)` メソッドです。この配列には、 `keys` メソッドに渡されたパターンにマッチするキーのリストが含まれています。この記事を簡単にするために、すべてのキーを返す `keys(\"*\")` を使ってみましょう。"
 
 #. type: Plain text
 #: upstream/_posts/2020-09-02-mutiny-redis.adoc:28
 #, fuzzy
 msgid "the `RedisClient.hgetall(key)` method returning a `Uni<JsonObject>`. This method retrieves the object associated with the passed key."
-msgstr "を返す `RedisClient.hgetall(key)` メソッドは、 `Uni&amp;lt;JsonObject&amp;gt;` 。このメソッドは、渡されたキーに関連するオブジェクトを取得します。"
+msgstr "を返す `RedisClient.hgetall(key)` メソッドは、 `Uni<JsonObject>` 。このメソッドは、渡されたキーに関連するオブジェクトを取得します。"
 
 #. type: Plain text
 #: upstream/_posts/2020-09-02-mutiny-redis.adoc:30
@@ -158,7 +158,7 @@ msgstr "キーを含む `JsonArray` を取得します。"
 #: upstream/_posts/2020-09-02-mutiny-redis.adoc:62
 #, fuzzy
 msgid "creates a `Multi` streaming these keys, it's a `Multi<Object>` as a `JsonArray` is extending `Iterable<Object>`"
-msgstr "は、これらのキーをストリーミングして `Multi` を作成すると、 `JsonArray` が拡張されるように `Multi&amp;lt;Object&amp;gt;` になります。 `Iterable&amp;lt;Object&amp;gt;`"
+msgstr "は、これらのキーをストリーミングして `Multi` を作成すると、 `JsonArray` が拡張されるように `Multi<Object>` になります。 `Iterable<Object>`"
 
 #. type: Plain text
 #: upstream/_posts/2020-09-02-mutiny-redis.adoc:63
@@ -202,7 +202,7 @@ msgstr "このスニペットにはちょっとした説明が必要です。"
 #: upstream/_posts/2020-09-02-mutiny-redis.adoc:79
 #, fuzzy
 msgid "For each item of the stream `keys`, we call `hgetall`, which produces a `Uni<JsonObject>`."
-msgstr "ストリーム `keys` の各アイテムに対して、 `hgetall` を呼び出し、 `Uni&amp;lt;JsonObject&amp;gt;` を生成します。"
+msgstr "ストリーム `keys` の各アイテムに対して、 `hgetall` を呼び出し、 `Uni<JsonObject>` を生成します。"
 
 #. type: Plain text
 #: upstream/_posts/2020-09-02-mutiny-redis.adoc:81
@@ -262,7 +262,7 @@ msgstr "このコードを複数回実行すると、結果の配列に順序の
 #: upstream/_posts/2020-09-02-mutiny-redis.adoc:98
 #, fuzzy
 msgid "Ok, step 2 done. Let's focus on the final steps: accumulate the objects into a `JsonArray`, and produce a `Uni<JsonArray>`, containing all the objects. Mutiny provides methods to gather items from a stream into lists, maps, sets, but there is no built-in `JsonArray` support. Fortunately, Mutiny offers a method that you can use to collect items in any structure:"
-msgstr "OK、ステップ2が完了しました。最後のステップに注目しましょう。オブジェクトを `JsonArray` に蓄積し、すべてのオブジェクトを含む `Uni&amp;lt;JsonArray&amp;gt;` を生成します。Mutinyはストリームからアイテムをリスト、マップ、セットに集めるメソッドを提供していますが、ビルトインの `JsonArray` サポートはありません。幸いなことに、Mutinyには任意の構造でアイテムを集めるのに使えるメソッドがあります。"
+msgstr "OK、ステップ2が完了しました。最後のステップに注目しましょう。オブジェクトを `JsonArray` に蓄積し、すべてのオブジェクトを含む `Uni<JsonArray>` を生成します。Mutinyはストリームからアイテムをリスト、マップ、セットに集めるメソッドを提供していますが、ビルトインの `JsonArray` サポートはありません。幸いなことに、Mutinyには任意の構造でアイテムを集めるのに使えるメソッドがあります。"
 
 #. type: delimited block -
 #: upstream/_posts/2020-09-02-mutiny-redis.adoc:103
