--- a/l10n/po/ja_JP/_posts/2020-09-15-mutiny-pagination.adoc.po
+++ b/l10n/po/ja_JP/_posts/2020-09-15-mutiny-pagination.adoc.po
@@ -231,7 +231,7 @@ msgstr ""
 #: upstream/_posts/2020-09-15-mutiny-pagination.adoc:127
 #, fuzzy
 msgid "This code above creates a stream with the item emitted by the `Unis` returned by the `getPage` method.  We increment the page number (stored in an `AtomicInteger`) every time.  So, it retrieves the page 1, 2, 3 ... and every time emits the received `List<Beer>` downstream."
-msgstr "上のコードでは、 `getPage` メソッドで返された `Unis` が発するアイテムでストリームを作成しています。ページ番号（ `AtomicInteger` に格納されている）を毎回インクリメントしています。つまり、1、2、3...とページを取得し、その都度、受信した `List&amp;lt;Beer&amp;gt;` を下流に向かって放出しています。"
+msgstr "上のコードでは、 `getPage` メソッドで返された `Unis` が発するアイテムでストリームを作成しています。ページ番号（ `AtomicInteger` に格納されている）を毎回インクリメントしています。つまり、1、2、3...とページを取得し、その都度、受信した `List<Beer>` を下流に向かって放出しています。"
 
 #. type: Plain text
 #: upstream/_posts/2020-09-15-mutiny-pagination.adoc:130
