--- a/l10n/po/ja_JP/_versions/main/guides/getting-started-testing.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/getting-started-testing.adoc.po
@@ -2256,7 +2256,7 @@ msgstr "`-Djava.util.logging.manager=org.jboss.logmanager.LogManager`"
 #. type: Plain text
 #: upstream/_versions/main/guides/getting-started-testing.adoc:1335
 msgid "`-Dmaven.home=<path-to-your-maven-installation>`"
-msgstr "`-Dmaven.home=&amp;lt;path-to-your-maven-installation&amp;gt;`"
+msgstr "`-Dmaven.home=&amp;lt;path-to-your-maven-installation>`"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/getting-started-testing.adoc:1337
