--- a/l10n/po/ja_JP/_versions/1.7/guides/getting-started-testing.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.7/guides/getting-started-testing.adoc.po
@@ -1561,7 +1561,7 @@ msgstr "`-Djava.util.logging.manager=org.jboss.logmanager.LogManager`"
 #. type: Plain text
 #: upstream/_versions/1.7/guides/getting-started-testing.adoc:893
 msgid "`-Dmaven.home=<path-to-your-maven-installation>`"
-msgstr "`-Dmaven.home=&amp;lt;path-to-your-maven-installation&amp;gt;`"
+msgstr "`-Dmaven.home=<path-to-your-maven-installation>`"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/getting-started-testing.adoc:895
