--- a/l10n/po/ja_JP/_versions/2.2/guides/getting-started-testing.adoc.po
+++ b/l10n/po/ja_JP/_versions/2.2/guides/getting-started-testing.adoc.po
@@ -2086,7 +2086,7 @@ msgstr "`-Djava.util.logging.manager=org.jboss.logmanager.LogManager`"
 #. type: Plain text
 #: upstream/_versions/2.2/guides/getting-started-testing.adoc:1217
 msgid "`-Dmaven.home=<path-to-your-maven-installation>`"
-msgstr "`-Dmaven.home=&amp;lt;path-to-your-maven-installation&amp;gt;`"
+msgstr "`-Dmaven.home=<path-to-your-maven-installation>`"
 
 #. type: Plain text
 #: upstream/_versions/2.2/guides/getting-started-testing.adoc:1219
